* Makefile.in (GCOV_OBJS): Add version.o. 	* gcov.c: Include "version.h" and <getopt.h>. 	(gcov_version_string): Remove. 	(print_usage): Take a parameter to determine whether this is a 	call from --help or an error message.  Give fuller output that 	follows the GNU Coding Standards for --help. 	(print_version): New function. 	(options): New. 	(process_args): Use getopt_long.  Support long options.  Follow 	GNU Coding Standards for --help and --version. 	* doc/gcov.texi: Document long options. 	Addresses part of PR other/704.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46703 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2117,7 +2117,7 @@ gcov.o: gcov.c gcov-io.h intl.h $(SYSTEM_H) $(CONFIG_H)
 
 # Only one of 'gcov' or 'gcov.exe' is actually built, depending
 # upon whether $(exeext) is empty or not.
-GCOV_OBJS = gcov.o intl.o
+GCOV_OBJS = gcov.o intl.o version.o
 gcov$(exeext): $(GCOV_OBJS) $(LIBDEPS)
 	$(CC) $(ALL_CFLAGS) $(LDFLAGS) $(GCOV_OBJS) $(LIBS) -o $@
 #
