* configure.in (noconfigdirs) [mmix-*-*]: Disable libgcj. 	* MAINTAINERS: Add self as maintainer of MMIX port. 	Remove old after-approval entry.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46744 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -843,6 +843,9 @@ case "${target}" in
 	   target_configdirs="${target_configdirs} target-bsp target-cygmon"
     fi
     ;;
+  mmix-*-*)
+    noconfigdirs="$noconfigdirs ${libgcj}"
+    ;;
   mn10200-*-*)
     noconfigdirs="$noconfigdirs ${libgcj}"
     if [ x${is_cross_compiler} != xno ] ; then
