* Makefile.in (dbxout.o): Depend on function.h. 	* collect2.c (is_in_list): Hide unused function. 	* dbxout.c: Include function.h. 	(source_label_number, dbxout_source_line, dbxout_source_file, 	dbxout_function_end, dbxout_begin_function): Wrap/move inside 	macros controlling usage. 	* gcc.c (TARGET_EXECUTABLE_SUFFIX): Undef before defining. 	* output.h (exports_section): Prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46759 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1418,7 +1418,7 @@ optabs.o : optabs.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h  \
    insn-config.h $(EXPR_H) $(OPTABS_H) libfuncs.h $(RECOG_H) reload.h \
    toplev.h $(GGC_H) real.h $(TM_P_H) except.h
 dbxout.o : dbxout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
-    $(REGS_H) debug.h $(TM_P_H) $(TARGET_H) \
+    $(REGS_H) debug.h $(TM_P_H) $(TARGET_H) function.h \
    insn-config.h reload.h gstab.h xcoffout.h output.h dbxout.h toplev.h
 debug.o : debug.c $(CONFIG_H) $(SYSTEM_H)
 sdbout.o : sdbout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
