2001-11-04  Toon Moene  <toon@moene.indiv.nluug.nl>
	* g77.texi: Split off invoke.texi (preliminary to using it
	to generate a man page).
	* Make-lang.in: Reflect in build rules.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46775 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/Make-lang.in
+++ b/gcc/f/Make-lang.in
@@ -170,7 +170,7 @@ f77.dvi: f/g77.dvi
 
 # g77 documentation.
 $(srcdir)/f/g77.info: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
-		$(srcdir)/f/ffe.texi \
+		$(srcdir)/f/ffe.texi $(srcdir)/f/invoke.texi \
 		$(srcdir)/f/news.texi  $(srcdir)/f/intdoc.texi \
 		$(srcdir)/f/root.texi $(srcdir)/doc/include/fdl.texi \
 		$(srcdir)/doc/include/gpl.texi \
@@ -185,7 +185,7 @@ $(srcdir)/f/g77.info: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
 	else true; fi
 
 f/g77.dvi: $(srcdir)/f/g77.texi $(srcdir)/f/bugs.texi \
-		$(srcdir)/f/ffe.texi \
+		$(srcdir)/f/ffe.texi $(srcdir)/f/invoke.texi \
 		$(srcdir)/f/news.texi  $(srcdir)/f/intdoc.texi \
 		$(srcdir)/f/root.texi $(srcdir)/doc/include/fdl.texi \
 		$(srcdir)/doc/include/gpl.texi \
