--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -2587,7 +2587,7 @@ misc.o : misc.c $(CONFIG_H) $(TREE_H) $(RTL_H) $(srcdir)/../expr.h \
    $(srcdir)/../flags.h $(srcdir)/../diagnostic.h $(srcdir)/../output.h \
    $(srcdir)/../except.h ../tm_p.h ../langhooks.h ada.h types.h atree.h \
    nlists.h elists.h sinfo.h einfo.h namet.h stringt.h uintp.h fe.h \
-   $(ADA_TREE_H) gigi.h
+   $(ADA_TREE_H) gigi.h ../langhooks-def.h
 
 targtyps.o : targtyps.c $(CONFIG_H) ada.h types.h atree.h nlists.h elists.h \
    uintp.h sinfo.h einfo.h namet.h snames.h stringt.h urealp.h fe.h \
