--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -335,6 +335,9 @@ AC_SUBST(enable_shared)
 # Determine the host, build, and target systems
 AC_CANONICAL_SYSTEM
 
+# Set program_transform_name
+AC_ARG_PROGRAM
+
 # Find the native compiler
 AC_PROG_CC
 AC_PROG_CC_C_O
