--- a/gcc/f/Make-lang.in
+++ b/gcc/f/Make-lang.in
@@ -39,10 +39,10 @@
 # $(srcdir) must be set to the gcc/ source directory (not gcc/f/).
 #
 # Actual name to use when installing a native compiler.
-G77_INSTALL_NAME = `t='$(program_transform_name)'; echo g77 | sed $$t`
+G77_INSTALL_NAME = `echo g77|sed '$(program_transform_name)'`
 
 # Actual name to use when installing a cross-compiler.
-G77_CROSS_NAME = `t='$(program_transform_cross_name)'; echo g77 | sed $$t`
+G77_CROSS_NAME = `echo g77|sed '$(program_transform_cross_name)'`
 
 # Some versions of `touch' (such as the version on Solaris 2.8) 
 # do not correctly set the timestamp due to buggy versions of `utime'
