* configure.in (--enable-languages): Be more permissive about syntax.  Check for empty lists better.  Warn about $LANGUAGES.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -1033,18 +1033,23 @@ fi
 # Look if the user specified --enable-languages="..."; if not, use
 # the environment variable $LANGUAGES if defined. $LANGUAGES might
 # go away some day.
+# NB:  embedded tabs in this IF block -- do not untabify
 if test x"${enable_languages+set}" != xset; then
 	if test x"${LANGUAGES+set}" = xset; then
-		enable_languages="`echo ${LANGUAGES} | tr ' ' ','`"
+		enable_languages="${LANGUAGES}"
+		echo configure.in: warning: setting LANGUAGES is deprecated, use --enable-languages instead 1>&2
 	else
 		enable_languages=all
 	fi
 else
-	if test x"${enable_languages}" = x; then
-		echo configure.in: --enable-languages needs at least one argument 1>&2
+	if test x"${enable_languages}" = x ||
+	   test x"${enable_languages}" = xyes;
+	then
+		echo configure.in: --enable-languages needs at least one language argument 1>&2
 		exit 1
 	fi
 fi
+enable_languages=`echo "${enable_languages}" | sed -e 's/[ 	,][ 	,]*/,/g' -e 's/,$//'`
 
 # First scan to see if an enabled language requires some other language.
 # We assume that a given config-lang.in will list all the language
