* c-lang.c (LANG_HOOKS_NAME): New. 	(lang_hooks): Constify. 	(c_init_options): Update. 	(lang_identify): Remove. 	* c-parse.in (language_string): Remove. 	* dbxout.c: Include langhooks.h. 	(dbxout_symbol_location): Update. 	* dwarf2out.c: Include langhooks.h. 	(gen_compile_unit_die): Update. 	* dwarfout.c: Include langhooks.h. 	(prototyped_attribute, output_compile_unit_die): Update. 	* langhooks-def.h (LANG_HOOKS_NAME, LANG_HOOKS_IDENTIFIER_SIZE): New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.h (struct lang_hooks): New members.  Constify. 	* stringpool.c: Don't include toplev.h. 	(set_identifier_size): Remove. 	* toplev.c (toplev_main): Initialize identifier size. 	(print_version): Update. 	* tree.h (language_string, init_lex, lang_identify, 	set_identifier_size): Remove. 	* Makefile.in: Update dependencies. 	* config/darwin.c: Include langhooks.h. 	(func_name_maybe_scoped): Update. 	* config/darwin.h (ASM_END_FILE): Update. 	* config/nextstep.h (ASM_END_FILE): Update. 	* config/nextstep21.h (ASM_END_FILE): Update. 	* config/i386/sun386.h (ASM_END_FILE): Update. 	* config/rs6000/rs6000.c (ASM_END_FILE): Include langhooks.h. 	(rs6000_output_function_epilogue): Update. ada: 	* misc.c (LANG_HOOKS_NAME, LANG_HOOKS_IDENTIFIER_SIZE): Override. 	(struct lang_hooks): Constify. 	(language_string, lang_identify): Remove. 	* utils.c (init_decl_processing): Update. cp: 	* cp-lang.c (LANG_HOOKS_NAME): Override. 	(struct lang_hooks): Constify. 	* lex.c (cxx_init_options): Update. 	(lang_identify): Remove. 	* parse.y (language_string): Remove. f: 	* com.c (language_string, lang_identify): Remove. 	(struct lang_hooks): Constify. 	(LANG_HOOKS_NAME): Override. 	(init_parse): Update. java: 	* jcf-parse.c (init_lex): Remove. 	* lang.c (language_string, lang_identify): Remove. 	(struct lang_hooks): Constify. 	(LANG_HOOKS_NAME): Override. 	(init_parse): Update. objc: 	* objc-act.c (LANG_HOOKS_NAME): Override. 	(struct lang_hooks): Constify. 	(objc_init_options): Update. 	(lang_id

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1422,7 +1422,7 @@ optabs.o : optabs.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h  \
    insn-config.h $(EXPR_H) $(OPTABS_H) libfuncs.h $(RECOG_H) reload.h \
    toplev.h $(GGC_H) real.h $(TM_P_H) except.h
 dbxout.o : dbxout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
-    $(REGS_H) debug.h $(TM_P_H) $(TARGET_H) function.h \
+    $(REGS_H) debug.h $(TM_P_H) $(TARGET_H) function.h langhooks.h \
    insn-config.h reload.h gstab.h xcoffout.h output.h dbxout.h toplev.h
 debug.o : debug.c $(CONFIG_H) $(SYSTEM_H)
 sdbout.o : sdbout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
@@ -1431,11 +1431,11 @@ sdbout.o : sdbout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) flags.h \
    sdbout.h toplev.h $(TM_P_H) except.h debug.h
 dwarfout.o : dwarfout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) dwarf.h \
    flags.h insn-config.h reload.h output.h toplev.h $(TM_P_H) \
-   debug.h
+   debug.h langhooks.h
 dwarf2out.o : dwarf2out.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) dwarf2.h \
    debug.h flags.h insn-config.h reload.h output.h diagnostic.h \
    hard-reg-set.h $(REGS_H) $(EXPR_H) libfuncs.h toplev.h dwarf2out.h varray.h \
-   $(GGC_H) except.h dwarf2asm.h $(TM_P_H)
+   $(GGC_H) except.h dwarf2asm.h $(TM_P_H) langhooks.h
 dwarf2asm.o : dwarf2asm.c $(CONFIG_H) $(SYSTEM_H) flags.h $(RTL_H) $(TREE_H) \
    output.h dwarf2asm.h $(TM_P_H)
 xcoffout.o : xcoffout.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(RTL_H) xcoffout.h \
@@ -1601,7 +1601,8 @@ params.o : params.c $(CONFIG_H) $(SYSTEM_H) $(PARAMS_H) toplev.h
 $(out_object_file): $(out_file) $(CONFIG_H) $(TREE_H) $(GGC_H) \
    $(RTL_H) $(REGS_H) hard-reg-set.h real.h insn-config.h conditions.h \
    output.h $(INSN_ATTR_H) $(SYSTEM_H) toplev.h $(TARGET_H) libfuncs.h \
-   $(TARGET_DEF_H) function.h sched-int.h $(TM_P_H) $(EXPR_H) $(OPTABS_H)
+   $(TARGET_DEF_H) function.h sched-int.h $(TM_P_H) $(EXPR_H) $(OPTABS_H) \
+   langhooks.h
 	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
 		$(out_file) $(OUTPUT_OPTION)
 
