--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3379,9 +3379,13 @@ update-po: $(CATALOGS:.gmo=.pox)
 
 # The new .po has to be gone over by hand, so we deposit it into
 # build/po with a different extension.
+# If build/po/$(PACKAGE).pot exists, use it (it was just created),
+# else use the one in srcdir.
 .po.pox:
 	test -d po || mkdir po
-	$(MSGMERGE) $< $(srcdir)/po/$(PACKAGE).pot -o $@
+	$(MSGMERGE) $< `if test -f po/$(PACKAGE).pot; \
+			then echo po/$(PACKAGE).pot; \
+			else echo $(srcdir)/po/$(PACKAGE).pot; fi` -o $@
 
 # This rule has to look for .gmo modules in both srcdir and
 # the cwd, and has to check that we actually have a catalog
@@ -3408,11 +3412,10 @@ install-po:
 # relatively harmless since the .po files do not directly depend on it.
 # Note that exgettext has an awk script embedded in it which requires a
 # fairly modern (POSIX-compliant) awk.
+# The .pot file is left in the build directory.
 $(PACKAGE).pot: po/$(PACKAGE).pot
 po/$(PACKAGE).pot: force
 	test -d po || mkdir po
 	$(MAKE) po-generated
 	AWK=$(AWK) $(SHELL) $(srcdir)/po/exgettext \
 		$(XGETTEXT) $(PACKAGE) $(srcdir)
-	$(SHELL) $(srcdir)/move-if-change $(PACKAGE).pot \
-		$(srcdir)/po/$(PACKAGE).pot
