* ChangeLog.2, ChangeLog.3, ChangeLog.4, ChangeLog.5, ChangeLog, 	cfg.c, cfganal.c, cfgcleanup.c, cfglayout.c, cfgloop.c, cfgrtl.c, 	collect2.c, combine.c, config.in, configure, configure.in, 	conflict.c, dwarf2out.c, dwarfout.c, except.c, final.c, flow.c, 	genattrtab.c, ggc-page.c, jump.c, lcm.c, predict.c, reg-stack.c, 	reload1.c, rtlanal.c, sched-rgn.c, toplev.c, unwind-dw2-fde.h: Fix 	spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46928 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config.in
+++ b/gcc/config.in
@@ -563,7 +563,7 @@
 #undef HAVE_AS_GOTOFF_IN_DATA
 
 /* Define if your assembler supports dwarf2 .file/.loc directives,
-   and preserves file table indicies exactly as given. */
+   and preserves file table indices exactly as given. */
 #undef HAVE_AS_DWARF2_DEBUG_LINE
 
 /* Define 0/1 to force the choice for exception handling model. */
