* doc/gcc.texi: Move several chapters out to ... 	* doc/bugreport.texi, doc/contribute.texi, doc/frontends.texi, 	doc/service.texi, doc/standards.texi, doc/trouble.texi, 	doc/vms.texi: ... here.  New files. 	* Makefile.in ($(docdir)/gcc.info, gcc.dvi): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46929 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2315,7 +2315,10 @@ $(docdir)/gcc.info: $(docdir)/gcc.texi $(docdir)/extend.texi \
 	 $(docdir)/c-tree.texi $(docdir)/rtl.texi $(docdir)/tm.texi \
 	 $(docdir)/gcov.texi $(docdir)/contrib.texi $(docdir)/objc.texi \
 	 $(docdir)/include/fdl.texi $(docdir)/include/gpl.texi \
-	 $(docdir)/include/funding.texi
+	 $(docdir)/include/funding.texi $(docdir)/bugreport.texi \
+	 $(docdir)/contribute.texi $(docdir)/frontends.texi \
+	 $(docdir)/service.texi $(docdir)/standards.texi \
+	 $(docdir)/trouble.texi $(docdir)/vms.texi
 	cd $(srcdir) && $(MAKEINFO) $(MAKEINFOFLAGS) -I doc -I doc/include -o doc/gcc.info doc/gcc.texi
 
 $(docdir)/cppinternals.info: $(docdir)/cppinternals.texi
@@ -2333,7 +2336,10 @@ gcc.dvi: $(docdir)/gcc.texi $(docdir)/extend.texi $(docdir)/install-old.texi \
 	 $(docdir)/rtl.texi $(docdir)/tm.texi $(docdir)/gcov.texi \
 	 $(docdir)/contrib.texi $(docdir)/objc.texi \
 	 $(docdir)/include/fdl.texi $(docdir)/include/gpl.texi \
-	 $(docdir)/include/funding.texi
+	 $(docdir)/include/funding.texi $(docdir)/bugreport.texi \
+	 $(docdir)/contribute.texi $(docdir)/frontends.texi \
+	 $(docdir)/service.texi $(docdir)/standards.texi \
+	 $(docdir)/trouble.texi $(docdir)/vms.texi
 	$(TEXI2DVI) -I $(docdir) -I $(docdir)/include $(docdir)/gcc.texi
 
 cppinternals.dvi: $(docdir)/cppinternals.texi
